--- a/templates/event-creation.html
+++ b/templates/event-creation.html
@@ -14,22 +14,22 @@
 
         <div class="form-group">
           <label for="event-name">Event Name</label>
-          <input id="event-name" class="form-control" type="text" name="name" required>
+          <input id="event-name" class="form-control" type="text" name="name">
         </div>
 
         <div class="form-group">
           <label for="start-time">Event Start Time (UTC)</label>
-          <input id="start-time" class="form-control" type="datetime-local" name="start-time" required>
+          <input id="start-time" class="form-control" type="datetime-local" name="start-time">
         </div>
 
         <div class="form-group">
           <label for="end-time">Event End Time (UTC)</label>
-          <input id="end-time" class="form-control" type="datetime-local" name="end-time" required>
+          <input id="end-time" class="form-control" type="datetime-local" name="end-time">
         </div>
 
         <div class="form-group">
           <label for="timezone">Timezone</label>
-          <select id="timezone" name="timezone" class="form-control" required>
+          <select id="timezone" name="timezone" class="form-control">
             <option value="America/Los_Angeles">Pacific Time</option>
             <option value="America/Denver">Mountain Time</option>
             <option value="America/Chicago">Central Time</option>
@@ -40,7 +40,7 @@
 
         <div class="form-group">
           <label for="currency">Currency</label>
-          <select id="currency" name="currency" class="form-control" required>
+          <select id="currency" name="currency" class="form-control">
             <option value="USD">US Dollars</option>
             <option value="CAD">Canadian Dollars</option>
             <option value="GBP">British Pounds</option>
